--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -29,12 +29,12 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker build -t docker.io/hikae/railsgoat:${{ github.sha }} .
+          docker build -t dockerfile/railsgoat:${{ github.sha }} .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
-          image-ref: 'docker.io/hikae/railsgoat:${{ github.sha }}'
+          image-ref: 'dockerfile/railsgoat:${{ github.sha }}'
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
